log
Tue 19 Mar 2024 02:41:18 PM UTC: 
 exercises.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
0dd38a6
Tue 19 Mar 2024 02:52:23 PM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3765196
Tue 19 Mar 2024 02:52:32 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b1a71e4
Tue 19 Mar 2024 02:53:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:88:3: error: "/*" within comment [-Werror=comment]
   88 |   /*int suma = 0;
      |    
exercises.c:96:1: error: expected identifier or ‘(’ before ‘}’ token
   96 | }
      | ^
test.c: In function ‘test_suma_lista’:
test.c:100:17: error: implicit declaration of function ‘sumaLista’ [-Werror=implicit-function-declaration]
  100 |     int suma2 = sumaLista(L);
      |                 ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
02b6493
Tue 19 Mar 2024 02:55:51 PM UTC: 
 exercises.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  1|4
total_score: 10/70
1f35449
Tue 19 Mar 2024 02:57:15 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
4b5bca7
Tue 19 Mar 2024 03:00:51 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
c5c3305
Tue 19 Mar 2024 03:05:08 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
64f00b3
Tue 19 Mar 2024 03:05:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
594f5a5
Tue 19 Mar 2024 03:07:02 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  4|1
total_score: 50/70
93226d0
Tue 19 Mar 2024 03:09:24 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
45139e8
Tue 19 Mar 2024 03:14:20 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
7d3e26c
Tue 19 Mar 2024 03:15:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e1e6d20
Tue 19 Mar 2024 03:15:51 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
5ec59ff
Tue 19 Mar 2024 03:19:12 PM UTC: 
 exercises.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:199:6: error: implicit declaration of function ‘is_empty_stack’ [-Werror=implicit-function-declaration]
  199 |   if(is_empty_stack(P))
      |      ^~~~~~~~~~~~~~
exercises.c:177:7: error: unused variable ‘cont’ [-Werror=unused-variable]
  177 |   int cont = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
c788941
Tue 19 Mar 2024 03:30:06 PM UTC: 
 exercises.c | 44 --------------------------------------------
 1 file changed, 44 deletions(-)
 tests:  4|1
total_score: 50/70
d3d6a44
Tue 19 Mar 2024 04:16:55 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
bd91494
Tue 19 Mar 2024 04:18:26 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
9602a32
Tue 19 Mar 2024 04:19:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
ae41e3f
Tue 19 Mar 2024 04:20:34 PM UTC: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  6|1
total_score: 60/70
4ffaa6d
Tue 19 Mar 2024 04:21:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
5bd93fd
Tue 19 Mar 2024 04:25:05 PM UTC: 
 exercises.c | 31 +++++++++++++++++--------------
 1 file changed, 17 insertions(+), 14 deletions(-)
 tests:  9|0
total_score: 70/70
88215eb
Tue 19 Mar 2024 04:30:10 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
b7dd144
Tue 19 Mar 2024 04:30:39 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
194f232
Tue 19 Mar 2024 04:33:05 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  9|0
total_score: 70/70
51ca658
Tue 19 Mar 2024 04:37:25 PM UTC: 
 exercises.c | 34 ++--------------------------------
 1 file changed, 2 insertions(+), 32 deletions(-)
 tests:  9|0
total_score: 70/70
8acd0fd
Tue 19 Mar 2024 04:44:29 PM UTC: 
 exercises.c | 47 +++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 45 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
11f7e28
Tue 19 Mar 2024 04:45:18 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:158:10: error: unused variable ‘P2’ [-Werror=unused-variable]
  158 |   Stack* P2 = create_stack();
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
ceff83d
Tue 19 Mar 2024 04:46:14 PM UTC: 
 exercises.c | 47 +----------------------------------------------
 1 file changed, 1 insertion(+), 46 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:155:1: error: control reaches end of non-void function [-Werror=return-type]
  155 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1383b00
Tue 19 Mar 2024 04:46:47 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|0
total_score: 70/70
ff94d70
Tue 19 Mar 2024 04:47:11 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
faa4fbc
Tue 19 Mar 2024 10:13:43 PM UTC: 
 exercises.c | 49 +++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 47 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:202:1: error: control reaches end of non-void function [-Werror=return-type]
  202 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e248a38
Tue 19 Mar 2024 10:14:08 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:175:1: error: control reaches end of non-void function [-Werror=return-type]
  175 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
959be8c
Tue 19 Mar 2024 10:14:35 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
e0d7ea3
Tue 19 Mar 2024 10:25:38 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  4|1
total_score: 50/70
46ca74a
Tue 19 Mar 2024 10:29:44 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|1
total_score: 50/70
e7302ca
Tue 19 Mar 2024 10:30:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
bc5edc4
